Assignations and inputs